the last version

--- a/index.html
+++ b/index.html
@@ -1,27 +1,57 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="no">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hvoran man bruker Git</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Git Guide</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f5f5f5;
+      color: #333;
+      padding: 40px;
+    }
+    h1 {
+      color: #007acc;
+    }
+    .section {
+      background-color: white;
+      padding: 15px;
+      margin-bottom: 15px;
+      border-radius: 6px;
+      box-shadow: 0 0 5px rgba(0,0,0,0.1);
+    }
+  </style>
 </head>
 <body>
-    <h1>Wassem sin Git site</h1>
-    denne side er laget av Wassem for å vise hva jeg har lært om Git og Github<br>
-    og hvordan du bruker Git i det daglige arbeidet<br>
+  <h1>Hvordan bruke Git</h1>
+  <p>Denne siden er laget av <strong>Wassem</strong> for å vise hva jeg har lært om Git og GitHub.</p>
 
+  <div class="section">
+    <h2>1. Starte Git</h2>
+    <p>Jeg brukte <code>git init</code> i VS Code for å lage et lokalt repository.</p>
+  </div>
 
+  <div class="section">
+    <h2>2. Legge til og lagre</h2>
+    <p>Jeg skrev <code>git add .</code> og <code>git commit -m "første commit"</code> for å lagre endringene mine.</p>
+  </div>
 
-    <P>jeg brukte git init i VS code Termial for å lage et lokalt repository på Github</P>
+  <div class="section">
+    <h2>3. Koble til GitHub</h2>
+    <p>Jeg laget et repository på GitHub og brukte <code>git push</code> for å laste opp prosjektet mitt.</p>
+  </div>
 
-    <p>jeg skrev git add . og git commit -m for å lagre endringene mine</p>
+  <div class="section">
+    <h2>4. Lage branch</h2>
+    <p>Jeg laget en ny branch med <code>git checkout -b ny-branch</code> for å jobbe videre.</p>
+  </div>
 
-    <p>jeg laget et repository på Github og brukte git push for å laste opp prosjektet mitt</p>
-    
+  <div class="section">
+    <h2>5. Slå sammen</h2>
+    <p>Til slutt brukte jeg <code>git merge</code> for å slå sammen branchene.</p>
+  </div>
 
-
-<div><img src="https://th.bing.com/th/id/OIP.MDr35nRLu_3LMvghJAV6ewHaEo?w=256&h=180&c=7&r=0&o=7&pid=1.7&rm=3" alt="">
-</div>
-
+  <p>Jeg lærte mye om hvordan Git fungerer og hvordan man kan samarbeide i prosjekter.</p>
 </body>
 </html>
